# presentation-wasm

./: .gitignore  Cargo.toml  README.md  pack.bat  serve.bat
pkg/: presentation_wasm_bg.js  presentation_wasm_bg.wasm
release/: index.html
release/wasm/: presentation_wasm.d.ts  presentation_wasm.js  presentation_wasm_bg.wasm.d.ts
src/: lib.rs  main.rs
