[package]
name = "presentation-wasm"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"


[dependencies]
winit = "0.28.6"
wgpu = "0.16.1"
env_logger = "0.10.0"
log = "0.4.19"
cfg-if = "1"
pollster = "0.3"

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "0.16", features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }
